@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype orto

skinparam classAttributeIconSize 0



class AuthenticationRepository {
    + getCurrentUserSession()
}

class Employee {
    + create(name, sizeClassification, area, address)
    + addGreenSpace(GreenSpace)
    + validateGreenSpace(GreenSpace)
}

class EmployeeRepository {
    + getEmployeeByUserID(userID)
}

class Organization {
    + anyUserHasId(userID)
}

class OrganizationRepository {
    + getOrganizationByUserID(userID)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getAuthenticationRepository()
    + getEmployeeRepository()
    + getOrganizationRepository()
}

class RegisterGreenSpaceController {
    + RegisterGreenSpaceController()
    + registerGreenSpace(name, sizeClassification, area, address)
    + getUserFromSession()
    + getOrganizationByID(userID)
}

class RegisterGreenSpaceUI {
}

note left of RegisterGreenSpaceController
    - userEmail and userRole is obtained
    from the user session.
end note

Repositories -> Repositories : instance
RegisterGreenSpaceUI .> RegisterGreenSpaceController
RegisterGreenSpaceController .> Repositories : repositories
Repositories --> "1" AuthenticationRepository
Repositories --> "1" EmployeeRepository
Repositories --> "1" OrganizationRepository
EmployeeRepository "1" --> "*" Employee : stores
OrganizationRepository "1" --> "*" Organization : stores

@enduml